objects/gvp__GoodData_Translation_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings used to translate gvp objects that have been renamed in an org.

Name of setting should be a unique code used in GoodData ETL.</description>
    <fields>
        <fullName>gvp__GoodData_Group__c</fullName>
        <label>GoodData Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__GoodData_Label__c</fullName>
        <inlineHelpText>Greatvines Object Name</inlineHelpText>
        <label>GoodData Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__GoodData_Order__c</fullName>
        <label>GoodData Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__GoodData_Plural__c</fullName>
        <label>GoodData Plural</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__GoodData_Subgroup__c</fullName>
        <label>GoodData Subgroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Salesforce_Object__c</fullName>
        <label>Salesforce Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GoodData Translation Settings</label>
</CustomObject>